# python-tdd-book

./: .gitignore  functional_tests.py  pyproject.toml
lists/: views.py
lists/templates/: home.html
python_tdd_book/: manage.py
python_tdd_book/python_tdd_book/: settings.py  urls.py  wsgi.py
superlists/: settings.py
