[tool.poetry]
name = "python-tdd-book"
version = "0.1.0"
description = ""
authors = ["Dani Soronellas <daniel.soronellas@gmail.com>"]
readme = "README.md"
packages = [{include = "python_tdd_book"}]

[tool.poetry.dependencies]
python = "3.7"
selenium = "<4"
Django = "<1.12"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
